fix bag with overflow-x on mobile

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -4,6 +4,8 @@
  *отступов (т.к bootstrap их по дефолту выстовляет свои)
  *минимальных размеров и максимальных размеров для удобства выставление собственных размеров
  */
+html
+	overflow-x: hidden
 *
 	margin: 0
 	font-family: var(--Font)
@@ -223,6 +225,7 @@ nav
 		padding: 0
 		line-height: normal
 		z-index: 3000
+		width: 100vw
 		div
 			&.error
 				margin: 0
